--- a/OpenWMS-common/branches/OpenWMS-Services/.classpath
+++ b/OpenWMS-common/branches/OpenWMS-Services/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/OpenWMS-common"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="output" path="build"/>
+	<classpathentry kind="output" path="build/ant"/>
 </classpath>
