Added osgi jar to main build
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@208 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/build.xml
+++ b/OpenWMS-common/trunk/build.xml
@@ -299,7 +299,7 @@
         <echo message="Building..." />
         <echo message="************************************************" />
     </target>
-    <target name="nightly" depends="clean, initialize, deps, compile, coverage-report, jar">
+    <target name="nightly" depends="clean, initialize, deps, compile, coverage-report, jar, jar-osgi">
         <echo message="************************************************" />
         <echo message="Building nightly build" />
         <echo message="************************************************" />
