Fixed bug in spring config
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@215 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/Spring/.classpath
+++ b/OpenWMS-common/branches/Spring/.classpath
@@ -173,7 +173,11 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.postgresql.jdbc3-8.3.603.jar"/>
+	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.postgresql.jdbc3-8.3.603.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-common"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-Services"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-6-sun-1.6.0.10"/>
