Corrected build file
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@221 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/OpenWMS-Services/build.properties
+++ b/OpenWMS-common/branches/OpenWMS-Services/build.properties
@@ -6,7 +6,8 @@
 #
 project.dir=.
 
-openwms_common.dist.dir=${env.OPENWMS_COMMON}/dist
+openwms_common.dir=${env.OPENWMS_COMMON}
+openwms_common.dist.dir=${openwms_common.dir}/dist
 
 ant.dir=${build.dir}/ant
 
