--- a/OpenWMS-common/trunk/build.xml
+++ b/OpenWMS-common/trunk/build.xml
@@ -31,6 +31,7 @@
     <patternset id="all.nonjava.files">
         <include name="**/*.txt" />
         <include name="**/*.xml" />
+		<include name="**/*.dtd"/>
         <include name="**/*.properties" />
     </patternset>
 
