--- a/OpenWMS-common/branches/Spring/.classpath
+++ b/OpenWMS-common/branches/Spring/.classpath
@@ -3,22 +3,18 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="spring"/>
-	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.apache.log4j-1.2.15.jar">
+	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.apache.log4j-1.2.15.jar" sourcepath="deps/build/com.springsource.org.apache.log4j-sources-1.2.15.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/build/org.springframework.core-2.5.6.A.jar">
+	<classpathentry exported="true" kind="lib" path="deps/build/org.springframework.core-2.5.6.A.jar" sourcepath="deps/build/org.springframework.core-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.org.junit-4.4.0.jar" sourcepath="deps/test/com.springsource.org.junit-sources-4.4.0.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.test-2.5.6.A.jar" sourcepath="deps/test/org.springframework.test-sources-2.5.6.A.jar">
+	<classpathentry kind="lib" path="deps/test/com.springsource.org.junit-4.4.0.jar" sourcepath="deps/test/com.springsource.org.junit-sources-4.4.0.jar"/>
+	<classpathentry kind="lib" path="deps/test/org.springframework.test-2.5.6.A.jar" sourcepath="deps/test/org.springframework.test-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
@@ -33,47 +29,32 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/build/commons-lang-2.4.jar">
+	<classpathentry kind="lib" path="deps/build/commons-lang-2.4.jar">
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.apache.commons.collections-3.2.0.jar" sourcepath="deps/build/com.springsource.org.apache.commons.collections-sources-3.2.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.apache.commons.collections-3.2.0.jar">
+	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.apache.commons.logging-1.1.1.jar" sourcepath="deps/build/com.springsource.org.apache.commons.logging-sources-1.1.1.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.apache.commons.logging-1.1.1.jar">
+	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.javax.persistence-1.0.0.jar" sourcepath="deps/test/com.springsource.javax.persistence-sources-1.0.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.javax.persistence-1.0.0.jar">
+	<classpathentry kind="lib" path="deps/test/com.springsource.org.hsqldb-1.8.0.9.jar" sourcepath="deps/test/com.springsource.org.hsqldb-sources-1.8.0.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.net.sf.cglib-2.1.3.jar" sourcepath="deps/test/com.springsource.net.sf.cglib-sources-2.1.3.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.org.hsqldb-1.8.0.9.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.net.sf.cglib-2.1.3.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.org.easymock-2.3.0.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.org.easymock.classextension-2.3.0.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.orm-2.5.6.A.jar">
+	<classpathentry kind="lib" path="deps/test/com.springsource.org.easymock-2.3.0.jar" sourcepath="deps/test/com.springsource.org.easymock-sources-2.3.0.jar"/>
+	<classpathentry kind="lib" path="deps/test/com.springsource.org.easymock.classextension-2.3.0.jar" sourcepath="deps/test/com.springsource.org.easymock.classextension-sources-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.orm-2.5.6.A.jar" sourcepath="deps/test/org.springframework.orm-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
@@ -83,42 +64,37 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.instrument.classloading-2.5.6.A.jar">
+	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.instrument.classloading-2.5.6.A.jar" sourcepath="deps/test/org.springframework.instrument.classloading-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.aop-2.5.6.A.jar">
+	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.aop-2.5.6.A.jar" sourcepath="deps/test/org.springframework.aop-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.context-2.5.6.A.jar">
+	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.context-2.5.6.A.jar" sourcepath="deps/test/org.springframework.context-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.transaction-2.5.6.A.jar">
+	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.transaction-2.5.6.A.jar" sourcepath="deps/test/org.springframework.transaction-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.jdbc-2.5.6.A.jar">
+	<classpathentry exported="true" kind="lib" path="deps/test/org.springframework.jdbc-2.5.6.A.jar" sourcepath="deps/test/org.springframework.jdbc-sources-2.5.6.A.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.org.aopalliance-1.0.0.jar">
+	<classpathentry exported="true" kind="lib" path="deps/test/com.springsource.org.aopalliance-1.0.0.jar" sourcepath="deps/test/com.springsource.org.aopalliance-sources-1.0.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="deps/build/antlr-2.7.7.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/build/commons-collections-3.2.1.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
@@ -168,18 +144,19 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/test/dbunit-2.2.jar">
+	<classpathentry kind="lib" path="deps/test/dbunit-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.postgresql.jdbc3-8.3.603.jar" sourcepath="deps/build/com.springsource.org.postgresql.jdbc3-sources-8.3.603.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.postgresql.jdbc3-8.3.603.jar">
+	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.javax.annotation-1.0.0.jar" sourcepath="deps/build/com.springsource.javax.annotation-sources-1.0.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-common"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-Services"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-6-sun-1.6.0.10"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
