--- a/OpenWMS-common/branches/Spring/etc/ivy.xml
+++ b/OpenWMS-common/branches/Spring/etc/ivy.xml
@@ -17,8 +17,10 @@
 	
 	<dependencies>
 		<dependency org="javax.annotation" name="jsr250-api" rev="1.0" conf="build->*" />
-
 		<dependency org="commons-lang" name="commons-lang" rev="2.4" conf="build->*" />
+		<!-- Java5 compatibility -->
+		<dependency org="javax.annotation" name="com.springsource.javax.annotation" rev="1.0.0" conf="build->*"/>
+
 		<!-- Used for JUnit tests -->
 		<dependency org="org.dbunit" name="dbunit" rev="2.2" conf="test->*" />
 		<!-- Cobertura -->
