Hallo Heiko habe den depend 'compile' im Target 'instrument'  rausgemacht. Bekomme sonst ein Fehler.
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@233 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/Spring/build.xml
+++ b/OpenWMS-common/branches/Spring/build.xml
@@ -180,7 +180,7 @@
     
     <taskdef classpathref="cobertura.classpath" resource="tasks.properties"/>
 
-    <target name="instrument" depends="compile, compile-tests">
+    <target name="instrument" depends="compile-tests">
 		<cobertura-instrument todir="${cobertura.instrumented.dir}" datafile="${cobertura.ser.file}">
 			<fileset dir="${build.main.dir}">
 				<include name="**/*.class"/>
