Ignore ActionScript generated files and removed flex compile from default build target
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@266 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/OpenWMS-common/build.xml
+++ b/OpenWMS-common/trunk/OpenWMS-common/build.xml
@@ -298,7 +298,7 @@
         <echo message="Building..." />
         <echo message="************************************************" />
     </target>
-    <target name="all" depends="clean, initialize, deps, compile, coverage-report, compile-flex, jar, jar-osgi">
+    <target name="all" depends="clean, initialize, deps, compile, coverage-report, jar, jar-osgi">
         <echo message="************************************************" />
         <echo message="Building nightly build" />
         <echo message="************************************************" />
