Changed project name
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@268 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/etc/ivy.xml
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/etc/ivy.xml
@@ -8,7 +8,7 @@
  */
 -->
 <ivy-module version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
-	<info organisation="openwms.org" module="OpenWMS-Flex-Integration"/>
+	<info organisation="openwms.org" module="OpenWMS-Flex-GraniteDS"/>
 	
 	<configurations>
 		<conf name="build" />
