--- a/OpenWMS-common/trunk/OpenWMS-common/build.xml
+++ b/OpenWMS-common/trunk/OpenWMS-common/build.xml
@@ -26,6 +26,11 @@
             <include name="**/*.jar" />
         </fileset>
     </path>
+    <path id="gas.class.path">
+        <fileset dir="${lib.dir}/granite">
+            <include name="**/*.jar" />
+        </fileset>
+    </path>
 
     <!-- All non java files in the src directory -->
     <patternset id="all.nonjava.files">
@@ -93,8 +98,8 @@
         </copy>
     </target>
 	
-	<taskdef name="gas3" classname="org.granite.generator.ant.AntJavaAs3Task"/>
 	<target name="generate.as3">
+		<taskdef name="gas3" classname="org.granite.generator.ant.AntJavaAs3Task" classpathref="gas.class.path"/>
 	    <gas3 outputdir="client/flex/as3" >
 	        <classpath>
 	        	<pathelement location="${build.main.dir}" />
@@ -115,7 +120,7 @@
             </section>
         </manifest>
         <!-- Build Swcs and add Manifest -->
-        <compc output="${flex.build.dir}/domainObjects.swc" use-network="false" warn-missing-namespace-decl="false" failonerror="no" logerror="yes" fork="yes">
+        <compc output="${flex.build.dir}/OpenWMS-common.swc" use-network="false" warn-missing-namespace-decl="false" failonerror="no" logerror="yes" fork="yes">
             <source-path path-element="${flex.src.dir}" />
             <include-sources dir="${flex.src.dir}" includes="**/*.as" />
             <compiler.external-library-path dir="${env.FLEX_HOME}/frameworks/libs" append="true">
@@ -126,8 +131,7 @@
                 <include name="granite-essentials.swc" />
             </compiler.include-libraries>
         </compc>
-        <zip basedir="${flex.build.dir}" update="true" keepcompression="true" destfile="${dist.dir}/domainObjects.swc" includes="META-INF/MANIFEST.MF" />
-        <delete dir="${flex.build.dir}" failonerror="no" />
+        <zip basedir="${flex.build.dir}" update="true" keepcompression="true" destfile="${dist.dir}/OpenWMS-common.swc" includes="**/*" />
     </target>
 
     <target name="compile-tests" depends="compile">
@@ -293,14 +297,19 @@
         </delete>
     </target>
 
-    <target name="build" depends="clean, initialize, compile, jar, jar-osgi, compile-flex">
+    <target name="build-flex-lib" depends="build, generate.as3, compile-flex">
         <echo message="************************************************" />
-        <echo message="Building..." />
+        <echo message="Building Flex client library" />
+        <echo message="************************************************" />
+    </target>
+    <target name="build" depends="clean, initialize, compile, jar, jar-osgi">
+        <echo message="************************************************" />
+        <echo message="Building jar files" />
         <echo message="************************************************" />
     </target>
     <target name="all" depends="clean, initialize, deps, compile, coverage-report, jar, jar-osgi">
         <echo message="************************************************" />
-        <echo message="Building nightly build" />
+        <echo message="Building nightly - additionally running tests and docs" />
         <echo message="************************************************" />
     </target>
 </project>
