Ignored generated files
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@291 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-tms/trunk/OpenWMS-tms/.settings/org.eclipse.jdt.core.prefs
+++ b/OpenWMS-tms/trunk/OpenWMS-tms/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,13 @@
-#Mon May 04 11:31:45 CEST 2009
+#Wed May 20 02:34:11 MYT 2009
 eclipse.preferences.version=1
+org.eclipse.jdt.core.codeComplete.argumentPrefixes=
+org.eclipse.jdt.core.codeComplete.argumentSuffixes=
+org.eclipse.jdt.core.codeComplete.fieldPrefixes=
+org.eclipse.jdt.core.codeComplete.fieldSuffixes=
+org.eclipse.jdt.core.codeComplete.localPrefixes=
+org.eclipse.jdt.core.codeComplete.localSuffixes=
+org.eclipse.jdt.core.codeComplete.staticFieldPrefixes=
+org.eclipse.jdt.core.codeComplete.staticFieldSuffixes=
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
